--- a/app/elements/logis/logis-elements.html
+++ b/app/elements/logis/logis-elements.html
@@ -1,5 +1,6 @@
 <!-- Logis Element -->
 <link rel="import" href="./anythings-sku.html" />
+<link rel="import" href="./logis-cell.html" />
 <link rel="import" href="./stock-taking.html" />
 <link rel="import" href="./rack-cell.html" />
 <link rel="import" href="./station-cell.html" />
